fix invalid feature flags

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,8 +58,8 @@ client = ["async-trait", "concat-string", "futures", "hyper/client", "serde", "s
 db = ["diesel", "diesel-util", "serde"]
 graphql = ["async-graphql", "diesel", "diesel-util", "serde"]
 grpc = ["tonic"]
-http1 = ["axum-05/http1", "axum-06/http1", "hyper/http1"]
-http2 = ["axum-05/http2", "axum-06/http2", "hyper/http2"]
+http1 = ["hyper/http1"]
+http2 = ["hyper/http2"]
 log_error = []
 max-allowed-request-body-size-large = []
 max-allowed-request-body-size-medium = []
