--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,7 +77,25 @@ repos:
         name: cargo-clippy
         description: lint the minimal changed packages in the cargo workspace
         stages: [push]
-        entry: cargo clippy --verbose
+        entry: cargo
+        args:
+        - clippy
+        - --verbose
+        - --features=axum-05,client,db,graphql,grpc,http1,http2,log_error,server,trace
+        language: system
+        types: [rust]
+        always_run: true
+        pass_filenames: false
+
+      - id: cargo-clippy
+        name: cargo-clippy
+        description: lint the minimal changed packages in the cargo workspace
+        stages: [push]
+        entry: cargo
+        args:
+        - clippy
+        - --verbose
+        - --features=axum-06,client,db,graphql,grpc,http1,http2,log_error,server,trace
         language: system
         types: [rust]
         always_run: true
