--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ axum-core = { version = "0", optional = true }
 cookie = { version = "0", optional = true }
 concat-string = { version = "1", optional = true }
 data-encoding = { version = "2", optional = true }
-derive_more = { git = "https://github.com/tlowerison/derive_more", rev = "81eaa77", optional = true }
+derive_more = { git = "https://github.com/tlowerison/derive_more", optional = true }
 diesel = { version = "2", optional = true }
-diesel-util = { git = "https://github.com/tlowerison/diesel-util", rev = "c872617", optional = true }
+diesel-util = { git = "https://github.com/tlowerison/diesel-util", optional = true }
 futures = { version = "0", optional = true }
 mongodb = { version = "2", optional = true }
 opentelemetry = { version = "0", optional = true }
@@ -33,7 +33,7 @@ ring = { version = "0", optional = true }
 serde = { version = "1", optional = true }
 serde_json = { version = "1", optional = true }
 serde_qs = { version = "0", optional = true }
-session-util = { git = "https://github.com/tlowerison/session-util", rev = "c0fe0c6", features = ["account"], optional = true }
+session-util = { git = "https://github.com/tlowerison/session-util", features = ["account-session"], optional = true }
 tonic = { version = "0", optional = true }
 tokio = { version = "1", features = ["signal"], optional = true }
 tower = { version = "0", optional = true }
