--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ axum-05 = { package = "axum", version = "0.5", default-features = false, feature
 axum-06 = { package = "axum", version = "0.6", default-features = false, features = ["headers"], optional = true }
 
 [features]
-default = ["http1", "max-allowed-request-body-size-medium"]
+default = ["http1"]
 axum-05 = ["dep:axum-05", "session-util/axum-core-02"]
 axum-06 = ["dep:axum-06", "session-util/axum-core-03"]
 client = ["async-trait", "concat-string", "futures", "hyper/client", "serde", "serde_json", "serde_qs", "trace"]
@@ -61,8 +61,10 @@ grpc = ["tonic"]
 http1 = ["hyper/http1"]
 http2 = ["hyper/http2"]
 log_error = []
-max-allowed-request-body-size-large = []
-max-allowed-request-body-size-medium = []
-max-allowed-request-body-size-small = []
+max-allowed-request-body-size-lg = []
+max-allowed-request-body-size-md = []
+max-allowed-request-body-size-sm = []
+max-allowed-request-body-size-xl = []
+max-allowed-request-body-size-xxl = []
 server = ["derive_more", "futures", "opentelemetry/rt-tokio", "serde", "serde_json", "session-util", "tokio", "tokio/macros", "tower", "tower/timeout", "trace", "uuid"]
 trace = ["opentelemetry", "opentelemetry-jaeger/rt-tokio", "tower-http", "tracing-error", "tracing-log", "tracing-opentelemetry", "tracing-subscriber", "tracing-tree", "uuid"]
