--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,73 +1,65 @@
-[package]
-name = "service-util"
-version = "0.1.0"
-authors = ["Trey Lowerison"]
-edition = "2021"
+[workspace]
+members = [
+  "core",
+  "service-util",
+  "proc-macros",
+]
+exclude = []
 
-[dependencies]
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+authors = ["Trey Lowerison"]
+
+[workspace.dependencies]
+anyhow = "1"
 async-backtrace = "0.2"
+async-graphql = "4"
+async-trait = "0"
+axum-05 = { package = "axum", version = "0.5", default-features = false, features = ["headers"] }
+axum-06 = { package = "axum", version = "0.6", default-features = false, features = ["headers"] }
+axum-core = "0"
 cfg-if = "1"
+color-eyre = "0"
+cookie = "0"
+concat-string = "1"
+convert_case = "^0.6"
+data-encoding = "2"
 derivative = "2"
+derive_more = { git = "https://github.com/tlowerison/derive_more" }
+diesel = "2"
+diesel-util = { git = "https://github.com/tlowerison/diesel-util", rev = "11846d0", default-features = false }
+futures = "0"
 hyper = "0"
+itertools = "^0.10"
 lazy_static = "1"
 log = "0"
+mongodb = "2"
+opentelemetry = "0.18"
+opentelemetry-jaeger = "0.17"
 paste = "1"
+proc-macro2 = "1"
+proc-macro-util = { git = "https://github.com/tlowerison/proc-macro-util", rev = "a06c7e4" }
+quote = "1"
+ring = "0"
+serde = "1"
+serde_json = "1"
+serde_qs = "0"
+session-util = { git = "https://github.com/tlowerison/session-util", rev = "bfee5b2", features = ["account-session"] }
+syn = "2"
 thiserror = "1"
+tonic = "0"
+tokio = { version = "1", features = ["signal"] }
+tower = "0"
+tower-http = { version = "0", features = ["request-id"] }
+tower-layer = "0"
+tower-service = "0"
 tracing = "0"
+tracing-error = "0"
+tracing-log = "0"
+tracing-opentelemetry = "0.18"
+tracing-subscriber = { version = "0", features = ["env-filter"] }
+tracing-tree = "0"
+uuid = { version = "1", features = ["serde", "v4"] }
 
-anyhow = { version = "1", optional = true }
-async-graphql = { version = "4", optional = true }
-async-trait = { version = "0", optional = true }
-axum-core = { version = "0", optional = true }
-color-eyre = { version = "0", optional = true }
-cookie = { version = "0", optional = true }
-concat-string = { version = "1", optional = true }
-data-encoding = { version = "2", optional = true }
-derive_more = { git = "https://github.com/tlowerison/derive_more", optional = true }
-diesel = { version = "2", optional = true }
-diesel-util = { git = "https://github.com/tlowerison/diesel-util", rev = "11846d0", default-features = false, optional = true }
-futures = { version = "0", optional = true }
-mongodb = { version = "2", optional = true }
-opentelemetry = { version = "0.18", optional = true }
-opentelemetry-jaeger = { version = "0.17", optional = true }
-ring = { version = "0", optional = true }
-serde = { version = "1", optional = true }
-serde_json = { version = "1", optional = true }
-serde_qs = { version = "0", optional = true }
-session-util = { git = "https://github.com/tlowerison/session-util", rev = "bfee5b2", features = ["account-session"], optional = true }
-tonic = { version = "0", optional = true }
-tokio = { version = "1", features = ["signal"], optional = true }
-tower = { version = "0", optional = true }
-tower-http = { version = "0", features = ["request-id"], optional = true }
-tower-layer = { version = "0", optional = true }
-tower-service = { version = "0", optional = true }
-tracing-error = { version = "0", optional = true }
-tracing-log = { version = "0", optional = true }
-tracing-opentelemetry = { version = "0.18", optional = true }
-tracing-subscriber = { version = "0", features = ["env-filter"], optional = true }
-tracing-tree = { version = "0", optional = true }
-uuid = { version = "1", features = ["serde", "v4"], optional = true }
-
-axum-05 = { package = "axum", version = "0.5", default-features = false, features = ["headers"], optional = true }
-axum-06 = { package = "axum", version = "0.6", default-features = false, features = ["headers"], optional = true }
-
-[features]
-default = ["anyhow", "http1"]
-anyhow = ["dep:anyhow", "diesel-util/anyhow"]
-axum-05 = ["dep:axum-05", "session-util/axum-core-02"]
-axum-06 = ["dep:axum-06", "session-util/axum-core-03"]
-client = ["async-trait", "concat-string", "futures", "hyper/client", "serde", "serde_json", "serde_qs", "trace"]
-color-eyre = ["dep:color-eyre", "diesel-util/color-eyre"]
-db = ["diesel", "diesel-util", "serde"]
-graphql = ["async-graphql", "diesel", "diesel-util", "serde"]
-grpc = ["tonic"]
-http1 = ["hyper/http1"]
-http2 = ["hyper/http2"]
-log_error = []
-max-allowed-request-body-size-lg = []
-max-allowed-request-body-size-md = []
-max-allowed-request-body-size-sm = []
-max-allowed-request-body-size-xl = []
-max-allowed-request-body-size-xxl = []
-server = ["derive_more", "futures", "opentelemetry/rt-tokio", "serde", "serde_json", "session-util", "tokio", "tokio/macros", "tower", "tower/timeout", "trace", "uuid"]
-trace = ["opentelemetry", "opentelemetry-jaeger/rt-tokio", "tower-http", "tracing-error", "tracing-log", "tracing-opentelemetry", "tracing-subscriber", "tracing-tree", "uuid"]
+service-util-proc-macros-core.path = "proc-macros/core"
