--- a/service-util/Cargo.toml
+++ b/service-util/Cargo.toml
@@ -11,12 +11,14 @@ proc-macros = { package = "service-util-proc-macros", path = "../proc-macros", d
 [features]
 default = ["anyhow", "http1"]
 anyhow = ["core/anyhow"]
+async-graphql-4 = ["core/async-graphql-4"]
+async-graphql-5 = ["core/async-graphql-5"]
+async-graphql-6 = ["core/async-graphql-6"]
 axum-05 = ["core/axum-05"]
 axum-06 = ["core/axum-06"]
 client = ["core/client"]
 color-eyre = ["core/color-eyre"]
 db = ["core/db"]
-graphql = ["core/graphql"]
 grpc = ["core/grpc"]
 http1 = ["core/http1"]
 http2 = ["core/http2"]
