--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ axum-05 = { package = "axum", version = "0.5", default-features = false, feature
 axum-06 = { package = "axum", version = "0.6", default-features = false, features = ["headers"] }
 axum-core = "0"
 cfg-if = "1"
+chrono = { version = "0", features = ["std"] }
 color-eyre = "0"
 cookie = "0"
 concat-string = "1"
