--- a/service-util/Cargo.toml
+++ b/service-util/Cargo.toml
@@ -29,4 +29,4 @@ max-allowed-request-body-size-sm = ["core/max-allowed-request-body-size-sm"]
 max-allowed-request-body-size-xl = ["core/max-allowed-request-body-size-xl"]
 max-allowed-request-body-size-xxl = ["core/max-allowed-request-body-size-xxl"]
 server = ["core/server"]
-trace = ["core/trace"]
+tracing = ["core/tracing"]
