clean up rough edges around tracing installation -- essentially make all configuration expected to come through environment variables

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -76,4 +76,4 @@ max-allowed-request-body-size-sm = []
 max-allowed-request-body-size-xl = []
 max-allowed-request-body-size-xxl = []
 server = ["derive_more", "futures", "opentelemetry/rt-tokio", "serde", "serde_json", "session-util", "tokio", "tokio/macros", "tower", "tower/timeout", "tracing", "uuid"]
-tracing = ["dep:tracing", "chrono", "diesel-util/tracing", "opentelemetry", "opentelemetry-jaeger/rt-tokio", "tower-http", "tracing-error", "tracing-log", "tracing-opentelemetry", "tracing-subscriber", "tracing-tree", "uuid"]
+tracing = ["dep:tracing", "chrono", "diesel-util/tracing", "opentelemetry", "opentelemetry-jaeger/rt-tokio", "serde", "tower-http", "tracing-error", "tracing-log", "tracing-opentelemetry", "tracing-subscriber", "tracing-tree", "uuid"]
