--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "proc-macros",
 ]
 exclude = []
+resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
@@ -34,19 +35,19 @@ diesel = "2"
 diesel-util = { git = "https://github.com/tlowerison/diesel-util", rev = "ab0957c", default-features = false }
 futures = "0"
 hyper = "0"
-itertools = "^0.10"
+itertools = "^0.11"
 lazy_static = "1"
 log = "0"
 mongodb = "2"
-opentelemetry = "0.18"
-opentelemetry-jaeger = "0.17"
+opentelemetry = "0.20"
+opentelemetry-jaeger = { version = "0.19", features = ["hyper_collector_client"] }
 paste = "1"
 pin-project-lite = "0"
 proc-macro2 = "1"
 proc-macro-util = { git = "https://github.com/tlowerison/proc-macro-util", rev = "a06c7e4" }
 quote = "1"
 ring = "0"
-serde = "1"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_qs = "0"
 session-util = { git = "https://github.com/tlowerison/session-util", rev = "bfee5b2", features = ["account-session"] }
@@ -61,7 +62,7 @@ tower-service = "0"
 tracing = "0"
 tracing-error = "0"
 tracing-log = "0"
-tracing-opentelemetry = "0.18"
+tracing-opentelemetry = "0.21"
 tracing-subscriber = { version = "0", features = ["env-filter"] }
 tracing-tree = "0"
 uuid = { version = "1", features = ["serde", "v4"] }
