--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -58,9 +58,9 @@ async-graphql-6 = { workspace = true, optional = true }
 [features]
 default = ["anyhow", "http1"]
 anyhow = ["dep:anyhow", "diesel-util/anyhow"]
-async-graphql-4 = ["dep:async-graphql-4", "diesel", "diesel-util", "diesel-util/async-graphql-4", "serde"]
-async-graphql-5 = ["dep:async-graphql-5", "diesel", "diesel-util", "diesel-util/async-graphql-5", "serde"]
-async-graphql-6 = ["dep:async-graphql-6", "diesel", "diesel-util", "diesel-util/async-graphql-6", "serde"]
+async-graphql-4 = ["dep:async-graphql-4", "serde"]
+async-graphql-5 = ["dep:async-graphql-5", "serde"]
+async-graphql-6 = ["dep:async-graphql-6", "serde"]
 axum-05 = ["dep:axum-05", "session-util/axum-core-02"]
 axum-06 = ["dep:axum-06", "session-util/axum-core-03"]
 client = ["async-trait", "concat-string", "futures", "hyper/client", "serde", "serde_json", "serde_qs", "tracing"]
